# CompressPhotoFast

./: .cursorignore  .cursorrules  .gitattributes  .gitignore  .kilocodeignore  .kilocodemodes  AGENTS.md  CLAUDE.md  DOUBLE_EXTENSION_FIX.md  DOUBLE_EXTENSION_PROBLEM.md  FINAL_REPORT.md  GEMINI.md  HELP.md  LOG.txt  QWEN.md  README.md  RECOMMENDATIONS.md  TASKS.txt  TESTING_PROGRESS_REPORT.md  batch_compression_plan.md  build.gradle.kts  code_analysis_report.txt  gradle.properties  plan_mode_example.md  settings.gradle.kts
.claude/: settings.json  settings.local.json
.docs/: README.md  TASKS.txt  agent_symlinks_system.md  fix_plan.md
.gemini/: .env
.opencode/: README.md  agents  memory-bank  package-lock.json
.qwen/: plan.md
.trae/: .ignore
app/: build.gradle.kts  proguard-rules.pro
compressphotofast-cli/: .gitignore  README.md  compressphotofast.bat  compressphotofast.sh  pyproject.toml  requirements.txt  setup.py
compressphotofast-cli/install/: detect_python.sh  install.ps1  install.sh  install_common.ps1  install_common.sh  install_deps.sh
compressphotofast-cli/src/: cli.py  compression.py  constants.py  exif_handler.py  file_lock.py  file_utils.py  multiprocessing_utils.py  stats.py  threading_utils.py
compressphotofast-cli/tests/: test_clean_double_extensions.py  test_file_utils.py  test_file_utils_simple.py
custom_modes/: creative_instructions.md  reflect_archive_instructions.md  van_instructions_OLD.md
docs/: CONTEXT.md  GRADLE_ECO_MODE.md  HELP.md  MEDIASTORE_DATES_SAMSUNG_FIX.md  TESTING.md  TESTING_PLAN.md  TEST_BASE_CLASSES.md  plan.md  (+7 more)
(+314 files in other folders)
